# AV2

./: .gitignore  .gitlab-ci.yml  AVM_技术文档.md  AVM_项目技术文档.md  CMakeLists.txt  README.md  docs.cmake  libs.doxy_template  mainpage.dox  usage.dox  usage_cx.dox  usage_dx.dox
.github/workflows/: build-job-reusable.yaml  common-builds-reusable.yaml  common-test-data-reusable.yaml  encdec-job-reusable.yaml  nightly.yaml  pull_request.yaml  sanitizer-job-reusable.yaml
.gitlab/: UBSan.supp  ci_nightly.yml
ParaKit/: README.md  parameters.yaml  setup_decoder.sh
ParaKit/unit_test/: parameters_unit_test.yaml
aom/: aom_codec.h  aom_decoder.h  aom_encoder.h  aom_frame_buffer.h  aom_image.h  aomcx.h  aomdx.h  exports_enc  exports_test
aom/internal/: aom_codec_internal.h
aom/src/: aom_codec.c  aom_decoder.c  aom_image.c
aom_dsp/: aom_dsp.cmake  aom_dsp_common.h  aom_dsp_rtcd.c  aom_dsp_rtcd_defs.pl  aom_filter.h  avg.c  bitreader.h  bitreader_buffer.c  bitreader_buffer.h  bitwriter.h  bitwriter_buffer.c  bitwriter_buffer.h  blend.h  blk_sse_sum.c  entcode.c  entcode.h  entdec.c  entenc.c  fastssim.c  fft.c  fwd_txfm.c  grain_synthesis.c  grain_synthesis.h  grain_table.c  grain_table.h  intrapred.c  intrapred_common.h  loopfilter.c  loopfilter.h  noise_model.c  noise_util.c  prob.h  psnr.c  quantize.h  recenter.h  sad4d.c  sad_av1.c  sse.c  ssim.h  subtract.c  (+2 more)
aom_dsp/arm/: avg_neon.c  fwd_txfm_neon.c  intrapred_neon.c  loopfilter_neon.c  sse_neon.c
aom_dsp/flow_estimation/: corner_detect.c  corner_detect.h  corner_match.c  flow_estimation.c  ransac.c  ransac.h
aom_dsp/mips/: aom_convolve_copy_dspr2.c  (+14 more)
aom_ports/: aom_ports.cmake  aom_timer.h  arm.h  emmintrin_compat.h  mem.h  mem_ops.h  mem_ops_aligned.h  sanitizer.h  system_state.h
aom_scale/: aom_scale_rtcd.c  aom_scale_rtcd.pl  yv12config.h
aom_util/: aom_util.cmake  debug_util.c  debug_util.h  endian_inl.h
apps/: aomdec.c  aomenc.c  avmdec.c  avmenc.c  avmenc.h
av1/: arg_defs.c  arg_defs.h  av1.cmake  av1_cx_iface.c  av1_dx_iface.c  av1_iface_common.h
av2/: arg_defs.c  arg_defs.h  av2.cmake  av2_cx_iface.c  av2_dx_iface.c  av2_iface_common.h  exports_com  exports_dec  exports_enc  exports_test
avm/: avm.h  avm_codec.h  avm_decoder.h  avm_encoder.h  avm_frame_buffer.h  avm_image.h  avm_integer.h  avmcx.h  avmdx.h  exports_com  exports_dec
avm_dsp/: avm_convolve.c  avm_dsp_rtcd_defs.pl  avm_simd.h  avm_simd_inline.h  binary_codes_reader.c  binary_codes_reader.h  binary_codes_writer.c  binary_codes_writer.h  bitreader.c  bitreader.h  bitreader_buffer.c  bitwriter.c  bitwriter.h  bitwriter_buffer.h  blend_a64_hmask.c  blend_a64_mask.c  blend_a64_vmask.c  entcode.c  entcode.h  entdec.c  entdec.h  entenc.c  entenc.h  fft_common.h  grain_synthesis.c  grain_synthesis.h  grain_table.c  loopfilter.c  loopfilter.h  mathutils.h  noise_model.c  noise_model.h  noise_util.h  prob.h  psnr.h  psnrhvs.c  pyramid.c  pyramid.h  quantize.c  sad.c  (+5 more)
avm_mem/: avm_mem.c  avm_mem.cmake  avm_mem.h
avm_ports/: arm_cpudetect.c  avm_once.h  bitops.h  emms.asm  msvc.h  ppc.h  ppc_cpudetect.c  x86.h  x86_abi_support.asm
avm_scale/: avm_scale.cmake  avm_scale.h  yv12config.h
avm_util/: avm_thread.c  avm_thread.h  debug_util.c
common/: args.c  args.h  args_helper.c  args_helper.h  av1_config.c  av1_config.h  av2_config.c  av2_config.h  ivfdec.c  ivfdec.h  ivfenc.c  ivfenc.h  lanczos_resample.c  lanczos_resample.h  md5_utils.c  md5_utils.h  obudec.c  obudec.h  rawenc.c  rawenc.h  stream_iter.c  stream_iter.h  tf_lite_includes.h  tools_common.c  tools_common.h  video_common.h  video_reader.c  video_reader.h  video_writer.c  video_writer.h  warnings.c  warnings.h  webmdec.cc  webmdec.h  webmenc.cc  webmenc.h  y4menc.c  y4menc.h  y4minput.c  y4minput.h
examples/: analyzer.cc  aom_cx_set_ref.c  av1_dec_fuzzer.cc  bru_encoder_decoder.c  build_av2_dec_fuzzer.sh  decode_to_md5.c  decode_with_drops.c  encoder_util.c  encoder_util.h  inspect.c  lossless_encoder.c  noise_model.c  resize_util.c  scalable_decoder.c  scalable_encoder.c  set_maps.c  simple_decoder.c  simple_encoder.c  tf_lite_model.cc  twopass_encoder.c
rtl/: AGENT_WORKFLOW.md  History.md  Progress.md  README.md  RTL优化总结.md  RTL优化进度报告.md  RTL修复完成总结报告.md  RTL修复总结报告_最终.md  RTL语法修复最终报告.md  Summary.md  analyze_sw_output.py  analyze_sw_pattern.py  av2_accelerator_bypass.v  av2_cdef_filter.v  av2_cdef_filter_real.v  av2_coeff_decoder.v  av2_coeff_decoder_fixed.v  av2_coeff_decoder_real.v  av2_context_model.v  av2_deblocking_filter.v  av2_deblocking_filter_real.v  av2_decoder_core.v  av2_decoder_memory.v  av2_decoder_top.v  av2_entropy_decoder.v  av2_entropy_decoder_ivf.v  av2_entropy_decoder_real.v  av2_frame_buffer_ctrl.v  av2_frame_header_parser.v  av2_intra_prediction.v  av2_intra_prediction_real.v  av2_intra_prediction_real_fixed.v  av2_inverse_transform.v  av2_inverse_transform_real.v  av2_inverse_transform_real_fixed.v  av2_inverse_transform_simple.v  av2_loop_filters.v  av2_motion_compensation.v  av2_motion_compensation_real.v  av2_mv_decoder.v  (+72 more)
stats/: aomstats.c  aomstats.h  rate_hist.c  rate_hist.h
test/: accounting_test.cc  acm_random.h  altref_test.cc  aomdec.sh  aomenc.sh  aq_segment_test.cc  arf_freq_test.cc  av1_ccso_simd_cmp.cc  av1_common_int_test.cc  av1_config_test.cc  av1_convolve_scale_test.cc  av1_convolve_test.cc  av1_encoder_parms_get_to_decoder.cc  av1_fwd_txfm2d_test.cc  av1_key_value_api_test.cc  av1_quantize_test.cc  av2_config_test.cc  av2_convolve_test.cc  av2_encoder_parms_get_to_decoder.cc  av2_fwd_txfm2d_test.cc  av2_nn_predict_test.cc  av2_txfm_test.h  av2_wedge_utils_test.cc  avm_integer_test.cc  avmcx_set_ref.sh  avmenc.sh  bawp_test.cc  best_encode.sh  binary_codes_test.cc  bitwriter_buffer_test.cc  blend_a64_mask_1d_test.cc  blend_a64_mask_test.cc  boolcoder_test.cc  borders_test.cc  bridge_frame_tests.sh  bru_tests.sh  cdef_test.cc  cfl_test.cc  clear_system_state.h  cnn_test.cc  (+125 more)
tools/: aom_entropy_optimizer.c  avm_entropy_optimizer.c  dump_obu.cc  obu_parser.cc  obu_parser.h  stream_demuxer.cc  stream_multiplexer.cc  stream_mux.h
(+753 files in other folders)
